--- a/Apps/Aplicacion1/templates/home.html
+++ b/Apps/Aplicacion1/templates/home.html
@@ -15,7 +15,7 @@
 <script src="{% static 'Aplicacion1/search.js' %}" defer></script>
 <style>
 body { margin: 0; padding: 0; }
-#map { position: absolute; top: 0; bottom: 0; width: 100%; }
+#map { position: absolute; top: 0; bottom: 0; width: 70%; height: 80%; }
 </style>    
 </head>
 <body>
