--- a/Apps/Aplicacion1/templates/base.html
+++ b/Apps/Aplicacion1/templates/base.html
@@ -19,6 +19,7 @@
         </div>
         <nav>
             <a href="{% url 'home' %}" class=" nav-link" >Inicio</a>
+            <a href="/clima" class=" nav-link" >Aire</a>
             {% if not user.is_authenticated %}
                 <a href="/singin" class=" nav-link" >Ingresar</a>
                 <a href="{% url 'login' %}" class=" nav-link" >Registrarme</a>
