Funcionamiento dee busqueda y aqi

--- a/Apps/Aplicacion1/static/Aplicacion1/estilos.css
+++ b/Apps/Aplicacion1/static/Aplicacion1/estilos.css
@@ -11,7 +11,7 @@ a{
 header{
     display:flex;
     min-height: 70px;
-    background-color: #4dfb99;
+    background-color: #31c571;
     justify-content: space-between;
     align-items: center;
     padding: 10px;
