--- a/Apps/Aplicacion1/templates/home.html
+++ b/Apps/Aplicacion1/templates/home.html
@@ -13,16 +13,34 @@
 <link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.0/mapbox-gl-geocoder.css" 
     type="text/css">
 <style>
+    body { margin: 0; padding: 0; font-family: Arial, sans-serif; }
+    #map { position: absolute; top: 0; bottom: 0; width: 100%; }
+    #respuesta {
+        position: absolute;
+        bottom: -20%;
+        left: 5%; 
+        background-color: rgba(137, 243, 128, 0.8);
+        padding: 10px;
+        border-radius: 5px;
+        box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+    }
+</style>
+<style>
     body { margin: 0; padding: 0; }
     #map {
-    position: absolute;
-    top: 55%; 
-    left: 50%; 
-    transform: translate(-50%, -50%); 
-    width: 80%; 
-    height: 80%; 
-}
-    </style>
+        position: absolute;
+        top: 55%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 80%;
+        height: 80%;
+    }
+    #city-aqi-container {
+        position: absolute;
+        top: 18%;
+        left: 12%;
+    }
+</style>
     </head>
     <body>
     <script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.0/mapbox-gl-geocoder.min.js"></script>
@@ -41,15 +59,40 @@
         min-width: 80%;
     }
     </style>
+    <script type="text/javascript" charset="utf-8">
+        var map; // Variable para el mapa
+
+        (function(w, d, t, f) {
+            w[f] = w[f] || function(c, k, n) {
+                s = w[f], k = s['k'] = (s['k'] || (k ? ('&k=' + k) : ''));
+                s['c'] =
+                    c = (c instanceof Array) ? c : [c];
+                s['n'] = n = n || 0;
+                L = d.createElement(t), e = d.getElementsByTagName(t)[0];
+                L.async = 1;
+                L.src = '//feed.aqicn.org/feed/' + (c[n].city) + '/' + (c[n].lang || '') + '/feed.v1.js?n=' + n + k;
+                e.parentNode.insertBefore(L, e);
+            };
+        })(window, document, 'script', '_aqiFeed');
+    </script>
 </head>
 <body>
+<form id="/recibir_ubicacion/" method="POST">
+    {% csrf_token %}
+    <input type="hidden" name="city" id="cityInput">
+</form>
 
 <div id="map"></div>
 
 <div id="geocoder" class="geocoder"></div>
 
+<div id="city-aqi-container"></div>
+
 <script>
-    mapboxgl.accessToken = 'pk.eyJ1IjoibXJpdmVybzAwIiwiYSI6ImNsbG11NWptbjF0ZmIzcXI2dDdybThnMmkifQ.uhdlXK3odioAdWo0OOogwA';
+var selectedCity = " ";
+var previousCity = null;
+
+mapboxgl.accessToken = 'pk.eyJ1IjoibXJpdmVybzAwIiwiYSI6ImNsbG11NWptbjF0ZmIzcXI2dDdybThnMmkifQ.uhdlXK3odioAdWo0OOogwA';
 
 navigator.geolocation.getCurrentPosition(successLocation, erroLocation, { enableHighAccuracy: true });
 
@@ -72,16 +115,69 @@ const map = new mapboxgl.Map({
 
 const geocoder = new MapboxGeocoder({
     accessToken: mapboxgl.accessToken,
-    mapboxgl: mapboxgl
+    mapboxgl: mapboxgl,
+    placeholder: "Buscar sitio",
 });
+
+geocoder.on('result', function(ev) {
+                var selectedCity = ev.result.text; // Actualiza la variable con la nueva ubicación seleccionada
+                updateCityAqi(selectedCity); // Actualiza el feed del AQI con la nueva ciudad seleccionada
+            });
 
 document.getElementById('geocoder').appendChild(geocoder.onAdd(map));
 
 const nav = new mapboxgl.NavigationControl();
 map.addControl(nav)
-}
-</script>
 
+_aqiFeed({ container: "city-aqi-container", 
+                        city: selectedCity, 
+                        display: "%details", 
+                        lang: "es",
+                    });
+}
+
+function updateCityAqi(city) {
+    if (city !== previousCity) {
+        previousCity = city;
+        document.getElementById('cityInput').value = city;
+        console.log('Ubicación actualizada:', city);
+
+        _aqiFeed({ 
+            container: "city-aqi-container", 
+            city: city,
+            display: "%details", 
+            lang: "es",
+        });
+
+        sendLocationToServer(city);
+    }
+}
+
+function sendLocationToServer(city) {
+    // Enviar la ubicación al servidor usando AJAX
+    var xhr = new XMLHttpRequest();
+    xhr.open('POST', '', true);
+    xhr.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded');
+
+    xhr.onload = function() {
+        if (xhr.status === 200) {
+            console.log('Ubicación enviada correctamente');
+        } else {
+            console.error('Error al enviar la ubicación');
+        }
+    };
+
+    var data = 'city=' + encodeURIComponent(city);
+    xhr.send(data);
+}
+
+</script>
+<div id="respuesta">
+    <h1>Calidad del Aire en {{ubicacion}}</h1>
+<p>Índice de Calidad del Aire: {{calidad_aire}}</p>
+<h2>Sugerencias para el Bienestar:</h2>
+<p>{{respuesta_ai}}</p>
+</div>
 </body>
 </html>
 {% endblock %}
