YO PERTENEZCO A JESUCRISTO

--- a/Apps/Aplicacion1/static/estilos.css
+++ b/Apps/Aplicacion1/static/estilos.css
@@ -14,8 +14,10 @@ header {
 }
 .logo
 {
-    display: flex;
+    position: absolute;
     align-items: center;
+    height: 50px;
+    width: 50px;
 }
 .logo img
 {
