--- a/Apps/Aplicacion1/templates/home.html
+++ b/Apps/Aplicacion1/templates/home.html
@@ -4,45 +4,38 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8">
-<title>Catz</title>
-<meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no">
-<link href="https://api.mapbox.com/mapbox-gl-js/v2.14.1/mapbox-gl.css" rel="stylesheet">
-<script src="https://api.mapbox.com/mapbox-gl-js/v2.14.1/mapbox-gl.js"></script>
-<script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.0/mapbox-gl-geocoder.min.js"></script>
-<link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.0/mapbox-gl-geocoder.css" 
-    type="text/css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Agbalumo">
-<style>
-    body { margin: 0; padding: 0; }
-    #map {
-    position: absolute;
-    top: 54%; 
-    left: 50%; 
-    transform: translate(-50%, -50%); 
-    width: 80%; 
-    height: 80%; 
-}
-    </style>
-    </head>
-    <body>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Catz</title>
+    <meta name="viewport" content="width=device-width initial-scale=1,maximum-scale=1,user-scalable=no">
+    <link href="https://api.mapbox.com/mapbox-gl-js/v2.14.1/mapbox-gl.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&family=Roboto:wght@300;400;500;700;900&display=swap"
+    rel="stylesheet">
+    <script src="https://api.mapbox.com/mapbox-gl-js/v2.14.1/mapbox-gl.js"></script>
+    <script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.0/mapbox-gl-geocoder.min.js"></script>
+    <link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.0/mapbox-gl-geocoder.css" 
+        type="text/css">
     <script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.0/mapbox-gl-geocoder.min.js"></script>
     <link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.0/mapbox-gl-geocoder.css" type="text/css">
-        
-    <style>
-    .geocoder 
-    {
-        text-align: center;
-        z-index: 1;
-        width: 50%;
-        left: 50%;
-        margin-left: 32%;
-        top: 20%;
-    }
-    .mapboxgl-ctrl-geocoder {
-        min-width: 80%;
-    }
-    </style>
+    <link rel="stylesheet" href="{% static '/style_widdget.css' %}">                                       
+</head>
+    <body>
+    <script type="text/javascript" charset="utf-8">
+        var map; // Variable para el mapa
+
+        (function(w, d, t, f) {
+            w[f] = w[f] || function(c, k, n) {
+                s = w[f], k = s['k'] = (s['k'] || (k ? ('&k=' + k) : ''));
+                s['c'] =
+                    c = (c instanceof Array) ? c : [c];
+                s['n'] = n = n || 0;
+                L = d.createElement(t), e = d.getElementsByTagName(t)[0];
+                L.async = 1;
+                L.src = '//feed.aqicn.org/feed/' + (c[n].city) + '/' + (c[n].lang || '') + '/feed.v1.js?n=' + n + k;
+                e.parentNode.insertBefore(L, e);
+            };
+        })(window, document, 'script', '_aqiFeed');
+    </script>
 </head>
 <body>
     <form id="/recibir_ubicacion/" method="POST">
