--- a/Apps/Aplicacion1/templates/base.html
+++ b/Apps/Aplicacion1/templates/base.html
@@ -14,7 +14,7 @@
     <header>
         <a href="#" class="logo">
 
-            <img src="{% static 'Aplicacion1/logoxd/gatolechuga.png' %}" alt="logo" class="logo img">
+            <img src="{% static 'imagenes/gatolechuga.png' %}" alt="logo" class="logo img">
             <h2 class="CATZ">Calidad del Aire en Tu Zona</h2>
         </div>
         <nav>
