--- a/Apps/Aplicacion1/static/estilos.css
+++ b/Apps/Aplicacion1/static/estilos.css
@@ -1,56 +1,92 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
-*{
-    margin:0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "poppins", sans-serif;
-    scroll-behavior: smooth;
-}
-
-
-body{
-    font-family: sans-serif;
-    margin: 0;
-}
-
-a{
-    text-decoration :none;
-    color: black
-}
-
-header{
-    display:flex;
-    min-height: 70px;
-    background-color: #31c571;
+header {
+    display: flex;
+    position: static;
     justify-content: space-between;
     align-items: center;
     padding: 10px;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 999;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed; /* Esto hace que el fondo se mueva con el contenido */
 }
-
-.logo{
-    display:flex;
+.logo
+{
+    display: flex;
     align-items: center;
 }
-
-.logo img{
+.logo img
+{
     height: 50px;
     margin-right: 10px;
 }
+.nombre{
+    font-size: 30px; /* Ajusta el tamaño de fuente a tu gusto */
+    color:#fff; /* Cambia el color del texto según tu preferencia */
+    font-family: 'Agbalumo', sans-serif;
 
-nav a{
-    font-weight: 60;
-    padding-right: 10px;
+}
+header ul
+{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
+header ul li 
+{
+    List-styLe: none;
+    margin-Left: 20px;
+}
+header ul li a
+{
+    margin-right: 15px;
+    text-decoration: none;
+    padding: 6px 15px;
+    color:#fff;
+    border-radius: 20px;
+}
+header ul li a:hover
+{
+    background:#fff;
+    color:#2b1055
 }
 
-nav a:hover{
-    color:red
+section
+{
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    padding: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+section img
+{
+    position:absolute;
+    top: 0;
+    left: 0;
+    width: 90%;
+    height: 100%;
+    object-fit: cover;
+} 
+#text
+{
+    position: absolute;
+    color: #fff;
+    white-space: nowrap;
+    font-size: 7.5vw;
+    z-index: 9;
 }
 
-@media (max-width:700px){
+@media (max-width:700px)
+{
     header{
         flex-direction: column;
     }
-    nav{
+    header ul li a{
         padding: 10px 0px;
     }
 }
