--- a/Apps/Aplicacion1/templates/profile.html
+++ b/Apps/Aplicacion1/templates/profile.html
@@ -1,55 +1,71 @@
 {% extends 'base.html' %}
+{% load static %}
 {% block content %}
 
 <!DOCTYPE html>
 <html>
 <head>
 <meta charset="utf-8">
-<h1>Profile</h1>
+<h1>Perfil</h1>
 <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no">
 <link href="https://api.mapbox.com/mapbox-gl-js/v2.14.1/mapbox-gl.css" rel="stylesheet">
 <script src="https://api.mapbox.com/mapbox-gl-js/v2.14.1/mapbox-gl.js"></script>
 <script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.0/mapbox-gl-geocoder.min.js"></script>
 <link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.0/mapbox-gl-geocoder.css" 
     type="text/css">
-<style>
-    body { margin: 0; padding: 0; }
-    #map {
-    position: absolute;
-    top: 50%; 
-    left: 65%; 
-    transform: translate(-50%, -50%); 
-    width: 65%; 
-    height: 75%; 
-}
-    </style>
-    </head>
+</head>
     <body>
     <script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.0/mapbox-gl-geocoder.min.js"></script>
     <link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.0/mapbox-gl-geocoder.css" type="text/css">
-        
-    <style>
-    .geocoder {
-        position: absolute;
-        z-index: 1;
-        width: 40%;
-        left: 67%;
-        margin-left: -20%;
-        top: 14%;
-    }
-    .mapboxgl-ctrl-geocoder {
-        min-width: 100%;
-    }
-    </style>
+    <link rel="stylesheet" href="{% static '/perfil.css' %}">                                       
 </head>
 <body>
+    <div id="map" class="map"></div>
 
-<div id="map"></div>
+    <div id="geocoder" class="geocoder"></div>
+    <button class="boton">
+        Guardar Ubicacion
+    </button>
 
-<div id="geocoder" class="geocoder"></div>
+    <div class="direccion">
+        <samp>{{u}}</samp>
+    </div>
+
+    <div class="direcciones">
+        {% for direccion in direcciones %}
+
+            <h1>
+            
+                {{ direccion }}
+
+            </h1>
+
+        {% endfor %}
+    </div>
+
+    
+
+<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+<script>
+    $(function() {
+        // Configura las cookies del token CSRF
+        var csrftoken = jQuery("[name=csrfmiddlewaretoken]").val();
+        function csrfSafeMethod(method) {
+            // estos métodos no requieren CSRF
+            return /^(GET|HEAD|OPTIONS|TRACE)$/.test(method);
+        }
+        $.ajaxSetup({
+            beforeSend: function(xhr, settings) {
+                if (!csrfSafeMethod(settings.type) && !this.crossDomain) {
+                    xhr.setRequestHeader("X-CSRFToken", csrftoken);
+                }
+            }
+        });
+    });
+</script>
 
 <script>
-    mapboxgl.accessToken = 'pk.eyJ1IjoibXJpdmVybzAwIiwiYSI6ImNsbG11NWptbjF0ZmIzcXI2dDdybThnMmkifQ.uhdlXK3odioAdWo0OOogwA';
+mapboxgl.accessToken = 'pk.eyJ1IjoibXJpdmVybzAwIiwiYSI6ImNsbG11NWptbjF0ZmIzcXI2dDdybThnMmkifQ.uhdlXK3odioAdWo0OOogwA';
 
 navigator.geolocation.getCurrentPosition(successLocation, erroLocation, { enableHighAccuracy: true });
 
@@ -61,6 +77,9 @@ function successLocation(position) {
 function erroLocation() {
     setupMap([-70.654191, -33.44395])
 }
+
+var previousCity = null;
+var selectedCity = null; 
 
 function setupMap(center) {
 const map = new mapboxgl.Map({
@@ -74,11 +93,50 @@ const geocoder = new MapboxGeocoder({
     accessToken: mapboxgl.accessToken,
     mapboxgl: mapboxgl
 });
+geocoder.on('result', function(ev) {
+                        var city = ev.result.text;
+                        console.log('Direccion', city) // Actualiza la variable con la nueva ubicación seleccionada
+                        selectedCity = city
+                        sendLocationToServer(city)
+                    });
 
 document.getElementById('geocoder').appendChild(geocoder.onAdd(map));
 
 const nav = new mapboxgl.NavigationControl();
 map.addControl(nav)
+        
+}
+function sendLocationToServer(city) {
+        fetch('/profile/',{
+            method: 'POST',
+            headers:{
+                'Content-Type': 'application/x-www-form-urlencoded',
+                'X-CSRFToken': getCookie('csrftoken')
+            },
+            body: 'city=' + encodeURIComponent(city)
+        })
+        .then(response => response.json())
+        .then(data => {
+            console.log('Respuesta del servidor:', data);
+        })
+        .catch(error => {
+            console.error('Error al enviar la ubicación:', error);
+        });
+}
+
+function getCookie(name) {
+    var cookieValue = null;
+    if (document.cookie && document.cookie !== '') {
+        var cookies = document.cookie.split(';');
+        for (var i = 0; i < cookies.length; i++) {
+            var cookie = cookies[i].trim();
+            if (cookie.substring(0, name.length + 1) === (name + '=')) {
+                cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                break;
+            }
+        }
+    }
+    return cookieValue;
 }
 </script>
 
