--- a/Apps/Aplicacion1/templates/profile.html
+++ b/Apps/Aplicacion1/templates/profile.html
@@ -17,6 +17,7 @@
     <body>
     <script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.0/mapbox-gl-geocoder.min.js"></script>
     <link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.0/mapbox-gl-geocoder.css" type="text/css">
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <link rel="stylesheet" href="{% static '/perfil.css' %}">              
     <link rel="stylesheet" href="{% static '/widget_perfil.css' %}">                          
 </head>
