header bien puesto ahora si que si diosito xfavor

--- a/Apps/Aplicacion1/templates/base.html
+++ b/Apps/Aplicacion1/templates/base.html
@@ -9,15 +9,13 @@ body {
     background-attachment: fixed;
     overflow-x: hidden;
 }
-
-
 </style>
-
 
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Agbalumo:400,700&display=swap">
     <link rel="stylesheet" type="text/css" href="{% static 'estilos.css' %}"> 
     <title>CATZ</title>
 </head>
