--- a/Apps/Aplicacion1/static/estilos.css
+++ b/Apps/Aplicacion1/static/estilos.css
@@ -14,6 +14,7 @@ header {
 }
 .logo
 {
+    display: flex;
     position: absolute;
     align-items: center;
     height: 50px;
@@ -28,7 +29,6 @@ header {
     font-size: 30px; /* Ajusta el tamaño de fuente a tu gusto */
     color:#fff; /* Cambia el color del texto según tu preferencia */
     font-family: 'Agbalumo', sans-serif;
-
 }
 header ul
 {
