--- a/Apps/Aplicacion1/templates/base.html
+++ b/Apps/Aplicacion1/templates/base.html
@@ -29,8 +29,7 @@ body {
             <li><a href="{% url 'home' %}">Inicio</a></li>
             <li><a href="{% url 'viaje' %}">Viajes</a></li>
             {% if not user.is_authenticated %}
-            <li><a href="/singin">Ingresar</a></li>
-            <li><a href="{% url 'login' %}">Registrarme</a></li>
+            <li><a href="{% url 'singin' %}">Ingresar</a></li>
             {% else %}
             <li><a href="{% url 'singout' %}">Cerrar Sesión</a></li>
             <li><a href="{% url 'profile' %}">Perfil</a></li>
